cambio de nombres de selectores de clase de compras adicionadas shoppingCart. ADiCIONADO EL boton de confirmar compra en este mismo aside para los 3 tipos de dispositivo:  mobil, tablet y desktop

--- a/camkatMob.css
+++ b/camkatMob.css
@@ -209,8 +209,6 @@ html{
       margin-bottom: 20px;
       display: inline-block;
       cursor:pointer;
-      
-
     }
 
     /* settings del modo mobile*/
@@ -269,16 +267,7 @@ html{
       color: var(--hospital-green);
     }
 
-/* configs generales para aside: */
-
-   /*  .product-detail {
-    background-color: var(--white);
-      width: 360px;
-      padding: 0 60px;
-      box-sizing: border-box;
-      position: absolute;
-      right: 0;
-    } lo cambiamos por aside*/ 
+/* configs generales para aside de carrito de compras: */
 
    #shoppingCartContainer {
     background-color: var(--white);
@@ -294,24 +283,24 @@ html{
     font-size: 1.6rem;
 
 }
-/* configs de mis ordenes pedidadas: */
+/* configs de mis ordenes adicionadas o pedidas: */
 
-    .title-container {
+    .shoppingCartTitle-container {
       display: flex;
       padding-bottom: 15%;
       justify-content: center;
       padding-top: 5%;
     }
-    .title-container img {
+    .shoppingCartTitle-container img {
       transform: rotate(180deg);
       margin-right: 14px;
     }
-    .title {
+    .shoppingCartTitle {
       font-size: var(--lg);
       font-weight: bold;
       background-color: #DAC0A3;
     }
-    .order {
+    .shoppingCartOrder {
       display: grid;
       grid-template-columns: auto 1fr;
       background-color: #DAC0A3;
@@ -322,48 +311,43 @@ html{
       border-radius: 8px;
       padding: 0 24px;
     }
-    .order p:nth-child(1) {
+    .shoppingCartOrder p:nth-child(1) {
       display: flex;
       flex-direction: column;
     }
-    .order p span:nth-child(1) {
+    .shoppingCartOrder p span:nth-child(1) {
       font-size: var(--md);
       font-weight: bold;
     }
-    .order p:nth-child(2) {
+    .shoppingCartOrder p:nth-child(2) {
       text-align: end;
       font-weight: bold;
     }
-    .shopping-cart {
+    .shopping-cartCadaAdicion {
       display: grid;
       grid-template-columns: auto 1fr auto auto;
       gap: 5px;
       margin-bottom: 24px;
       align-items: center;
     }
-    .shopping-cart figure {
+    .shopping-cartCadaAdicion figure {
       margin: 0;
     }
-    .shopping-cart figure img {
+    .shopping-cartCadaAdicion figure img {
       width: 70px;
       height: 70px;
       border-radius: 20px;
       object-fit: cover;
       
     }
-    .shopping-cart p:nth-child(2) {
+    .shopping-cartCadaAdicion p:nth-child(2) {
       color: var(--very-light-pink);
     }
-    .shopping-cart p:nth-child(3) {
+    .shopping-cartCadaAdicion p:nth-child(3) {
       font-size: var(--md);
       font-weight: bold;
     }
-
-    /* .shopping-cart figure img:nth-child(2) {
-        cursor: pointer;
-    } */
-
-    .primary-button {
+    .shopping-cartPrimary-button {
       background-color: var(--hospital-green);
       border-radius: 8px;
       border: none;
@@ -373,16 +357,15 @@ html{
       font-size: var(--md);
       font-weight: bold;
       height: 50px;
+      margin-bottom: 24px;
     }
-
     .logoDeCerrarCompraListada{
         cursor: pointer;
     }
 
+
+
     /* configs de detalles de cada orden */
-
-
-
     #productDetail {
         background-color: var(--white);
         /* padding: 0 60px;  lo sacamos de aqui para que no se aplique a todos los asides, y se lo ponemos solamente a nuestro shoppingCartContainer  ue es el menu de carrito y que si lo necesita*/
@@ -445,7 +428,7 @@ html{
       margin-top: 0;
       margin-bottom: 36px;
     }
-    .primary-button {
+    .primary-buttonProductDetail {
       background-color: var(--hospital-green);
       border-radius: 8px;
       border: none;
@@ -456,7 +439,7 @@ html{
       font-weight: bold;
       height: 50px;
     }
-    .add-to-cart-button {
+    .add-to-cart-buttonProductDetail {
       display: flex;
       align-items: center;
       justify-content: center;
