--- a/camkatMob.css
+++ b/camkatMob.css
@@ -1629,3 +1629,42 @@ html{
       margin-bottom: 30px;
     }
    
+/* configs de despelgable de metodos de pago: */
+
+       .divMetodoPago{
+            width: 100%;
+            height: 100%;
+            display: grid;
+            place-items: center;
+        }
+
+        .divContenedorMetodoPago{
+            display: grid;
+            width: 300px;
+             place-items: center;
+             position: absolute;
+             top: 70px;
+        }
+
+        .checkboxMetodoPago{
+            display: grid;
+            grid-template-columns: auto auto;
+            width: 300px;
+           
+        }
+
+        .logoMetodoPago{
+            width: 150px;
+            height: 100px;
+            object-fit: contain;
+        }
+
+        .buttonPagoDefMetodoPago{
+            margin-top: 24px;
+            background-color: var(--hospital-green);
+            border-radius: 8px;
+            border: none;
+            width: 100%;
+            height: 50px;
+
+        }
