--- a/camkatMob.css
+++ b/camkatMob.css
@@ -1632,43 +1632,63 @@ html{
 /* configs de despelgable de metodos de pago: */
 
         .divTodosMetodoDePago{
-            
             position: absolute;
-            right: 0px;
-            top: 10px;
+            right: 5%;
+            left: 5%;
+            top: 7.6vh;
             width: 90%;
-            height: 100%;
-            background-color: var(--white);
+            height: 100vh;
+            font-weight: bold;
+            font-size: 1.6rem;
         }
 
        .divMetodoPago{
-            
-            height: 500px;
+            /* height: 500px; */
             display: grid;
             place-items: center;
             /* height: 100vh; */
             position: absolute;
             right: 0px;
-            top: 10px;
+            /* top: 0; */
             width: 100%;
             background-color: var(--white);
             border: 1px solid black;
             border-radius: 6px;
+            height: 100%;
+            font-weight: bold;
         }
 
         .divContenedorMetodoPago{
-             display: grid;
-             width: 300px;
-             place-items: center;
-             position: absolute;
-             top: 70px;
-             background-color: var(--white);
+            display: grid;
+            width: 90%;
+            place-items: center;
+            position: absolute;
+            top: 22px;
+            background-color: var(--white);
+            padding-right: 10%;
+            padding-left: 10%;
+            
         }
+
+        .divContenedorMetodoPago p {  
+            font-weight: initial;
+            text-align: center;
+            color: var(--very-light-pink);
+        }
+
+        .tittleMetodoPago{
+            font-weight: bold;
+           
+        }
+
 
         .checkboxMetodoPago{
             display: grid;
             grid-template-columns: auto auto;
-            width: 300px;
+            width: 90%;
+            margin-top: 5%;
+            /* font-weight: bold; */
+            font-weight: bold;
            
         }
 
@@ -1676,6 +1696,8 @@ html{
             width: 150px;
             height: 100px;
             object-fit: contain;
+            /* border-bottom: 150px; */
+            margin-bottom: 6%;
         }
 
         .buttonPagoDefMetodoPago{
@@ -1685,5 +1707,7 @@ html{
             border: none;
             width: 100%;
             height: 50px;
-
+            font-weight: bold;
+            font-size: var(--lg);
+            color: white;
         }
