--- a/camkatTablet.css
+++ b/camkatTablet.css
@@ -1660,6 +1660,89 @@ html{
       /* margin-top: 14px; */
       margin-bottom: 30px;
     }
+
+       
+/* configs de despelgable de metodos de pago: */
+
+        .divTodosMetodoDePago{
+            position: absolute;
+            right: 25%;
+            left: 25%;
+            top: 7.6vh;
+            width: 50%;
+            height: 100vh;
+            font-weight: bold;
+            font-size: 1.6rem;
+        }
+
+       .divMetodoPago{
+            /* height: 500px; */
+            display: grid;
+            place-items: center;
+            /* height: 100vh; */
+            position: absolute;
+            right: 0px;
+            /* top: 0; */
+            width: 100%;
+            background-color: var(--white);
+            border: 1px solid black;
+            border-radius: 6px;
+            height: 100%;
+            font-weight: bold;
+        }
+
+        .divContenedorMetodoPago{
+            display: grid;
+            width: 90%;
+            place-items: center;
+            position: absolute;
+            top: 22px;
+            background-color: var(--white);
+            padding-right: 10%;
+            padding-left: 10%;
+        }
+
+        .divContenedorMetodoPago p {  
+            font-weight: initial;
+            text-align: center;
+            color: var(--very-light-pink);
+        }
+
+        .tittleMetodoPago{
+            font-weight: bold;
+           
+        }
+
+
+        .checkboxMetodoPago{
+            display: grid;
+            grid-template-columns: auto auto;
+            width: 90%;
+            margin-top: 5%;
+            /* font-weight: bold; */
+            font-weight: bold;
+           
+        }
+
+        .logoMetodoPago{
+            width: 150px;
+            height: 100px;
+            object-fit: contain;
+            /* border-bottom: 150px; */
+            margin-bottom: 6%;
+        }
+
+        .buttonPagoDefMetodoPago{
+            margin-top: 24px;
+            background-color: var(--hospital-green);
+            border-radius: 8px;
+            border: none;
+            width: 100%;
+            height: 50px;
+            font-weight: bold;
+            font-size: var(--lg);
+            color: white;
+        }
 }
 
 
