--- a/camkatTablet.css
+++ b/camkatTablet.css
@@ -1713,15 +1713,32 @@ html{
            
         }
 
+        .labelOpcionesDePago{
+            font-weight: bold;
+            color: var(--very-light-pink);
+            padding-bottom: 3%;
+
+        }
 
         .checkboxMetodoPago{
             display: grid;
-            grid-template-columns: auto auto;
+            grid-template-rows: auto auto;
             width: 90%;
             margin-top: 5%;
             /* font-weight: bold; */
             font-weight: bold;
+            place-items: center;
            
+        }
+
+        .selectPagos{
+            font-size: 1.6rem;
+            font-weight: bold;
+        }
+
+        .selectPagos option {
+            font-size: 1.6rem;
+            font-weight: bold;
         }
 
         .logoMetodoPago{
