--- a/camkatMob.css
+++ b/camkatMob.css
@@ -1728,3 +1728,29 @@ html{
             font-size: var(--lg);
             color: white;
         }
+
+        /* pago mastercard: */
+
+        .pagoMastercard{
+            width: 100%;
+            height: 100%;
+            margin-top: 10%;
+        }
+
+        .formPagoMastercard{
+            display: grid;
+            grid-template-rows: auto auto auto auto auto auto;
+            place-items: center;
+        }
+
+        .formPagoMastercard label {
+            font-size: 1.6rem;
+            font-weight: bold;
+            margin-top: 5%;
+        }
+
+        .labelNumTarjetaMastercard{
+            text-align: center;
+        }
+
+        
