--- a/camkatMob.css
+++ b/camkatMob.css
@@ -1781,3 +1781,31 @@ html{
             place-content: center;
             width: 100%;
         }
+
+        
+        /* pago Daviplata: */
+
+          .pagoDaviplata{
+            width: 100%;
+            height: 100%;
+            margin-top: 10%;
+        }
+
+        .formPagoDaviplata{
+            display: grid;
+            grid-template-rows: auto auto auto auto;
+            place-items: center;
+        }
+
+        .formPagoDaviplata label {
+            font-size: 1.6rem;
+            font-weight: bold;
+            margin-top: 5%;
+        }
+
+        .formPagoDaviplata select {
+            place-content: center;
+            width: 100%;
+        }
+
+
