--- a/camkatDesktop.css
+++ b/camkatDesktop.css
@@ -1832,4 +1832,21 @@ html{
             width: 100%;
         }
 
+
+        .divCerrarIngreso {
+        position: absolute;
+        top: 8px;
+        right: 7px;
+        width: 24px;
+        height: 21px;
+        background-color: black;
+    }
+
+
+     .divCerrarIngreso img {
+        object-fit: contain;
+        height: 100%;
+        width: 100%;
+        /* color: beige; */
+    } 
 }
