--- a/camkatTablet.css
+++ b/camkatTablet.css
@@ -1882,7 +1882,21 @@ html{
         }
 
 
+        .divCerrarIngreso {
+        position: absolute;
+        top: 8px;
+        right: 7px;
+        width: 24px;
+        height: 21px;
+        background-color: black;
+    }
 
+     .divCerrarIngreso img {
+        object-fit: contain;
+        height: 100%;
+        width: 100%;
+        /* color: beige; */
+    } 
 
 }
 
